# src/modules/cars/useCases/importCategory/Import CategoryController.ts
@@ -1,15 +1,0 @@
-import { Request, Response } from "express";
-
-import { ImportCategoryUseCase } from "./ImportCategoryUseCase";
-
-class ImportCategoryController {
-    constructor(private importCategoryUseCase: ImportCategoryUseCase) { }
-
-    handle(request: Request, response: Response): Response {
-        const { file } = request;
-        this.importCategoryUseCase.execute(file)
-        return response.send();
-    }
-}
-
-export { ImportCategoryController }
